--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 // ----------------------------------------------------------------------
 // Official Army Branding Colors
 // ----------------------------------------------------------------------
@@ -47,7 +48,7 @@ $social-branding: (
 // ----------------------------------------------------------------------
 // Colors 
 // ----------------------------------------------------------------------
-$primary-text-color: map-get($army-branding, armyblack);
+$primary-text-color: map.get($army-branding, armyblack);
 $secondary-background-color: #221F20;
 $secondary-text-color: #FFF;
 $secondary-border-color: #57584f;
