--- a/_scss/base/_print.scss
+++ b/_scss/base/_print.scss
@@ -1,3 +1,6 @@
+@use "colors";
+
+@use "sass:map";
 // some default styles for print
 
 @media print {
@@ -30,7 +33,7 @@
 
   a[href^="http://"]:after,
   a[href^="https://"]:after {
-    color: map-get($army-branding, grey70);
+    color: map.get(colors.$army-branding, grey70);
     content: " [" attr(href) "]";
     font-size: 90%;
     font-weight: normal;
