--- a/_scss/elements/_dropdown-nav.scss
+++ b/_scss/elements/_dropdown-nav.scss
@@ -1,12 +1,19 @@
+@use "../base/colors";
+@use "../base/variables";
+@use "../layout/grid-system-spans";
+@use "../base/mixins/breakpoints";
+@use "../base/custom-mixins/custom-transition";
+
+@use "sass:map";
 
 
 .dropdown-nav {
-  background: $lighter-gray-color;
+  background: colors.$lighter-gray-color;
   max-height: 0;
   overflow: hidden;
   text-align: center;
   
-  @include custom-transition(max-height .25s ease);
+  @include custom-transition.custom-transition(max-height .25s ease);
   
   &.opened { max-height: 1000px; }
   
@@ -14,32 +21,32 @@
   
   ul {
     li {
-      background: map-get($army-branding, white);
-      border: 1px solid map-get($army-branding, grey30);
+      background: map.get(colors.$army-branding, white);
+      border: 1px solid map.get(colors.$army-branding, grey30);
       display: inline-block;
       margin: 0 15px 15px 0;
       
-      @include custom-transition(background .25s ease);
+      @include custom-transition.custom-transition(background .25s ease);
       
       a {
         display: block;
-        font: 700 1.125em $font-family;
+        font: 700 1.125em variables.$font-family;
         padding: 16px 20px 14px;
         text-decoration: none;
       }
       
       &:hover, &.active {
-        background: map-get($army-branding, gold);
+        background: map.get(colors.$army-branding, gold);
       }
     }
   }
   
-  @include breakpoints(mobile) {
+  @include breakpoints.breakpoints(mobile) {
     text-align: left;
     
     ul li {
-      @include span(12);
-      a { font: 700 1em $font-family; }
+      @include grid-system-spans.span(12);
+      a { font: 700 1em variables.$font-family; }
     }
   }
 }
