--- a/_scss/elements/_forms.scss
+++ b/_scss/elements/_forms.scss
@@ -1,18 +1,24 @@
+@use "../base/colors";
+@use "../base/variables";
+@use "../layout/grid-system";
+@use "../layout/grid-system-spans";
+@use "../base/mixins/breakpoints";
+
+@use "sass:map";
 
 form {
   input,
   textarea {
-    border: 1px solid map-get($army-branding, grey30);
+    border: 1px solid map.get(colors.$army-branding, grey30);
     box-shadow: none;
-    font: 400 1em $font-family;
+    font: 400 1em variables.$font-family;
     outline: none;
     padding: 10px 10px 8px;
     width: 100%;
-    -webkit-appearance: none;
     
     &.invalid { border-color: red; }
     
-    &:focus { border-color: $input-focus; }
+    &:focus { border-color: colors.$input-focus; }
   }
 
   .validation {
@@ -29,7 +35,6 @@ form {
     margin: 0;
     padding: 0;
     width: 15px;
-    -webkit-appearance: radio;
   }
   
   textarea { height: 100px; }
@@ -37,7 +42,6 @@ form {
   input[type='submit'] { cursor: pointer; }
   
   input[type='checkbox'] {
-    -webkit-appearance: checkbox;
     width: auto;
   }
   
@@ -63,10 +67,10 @@ form {
   }
   
   .field-row {
-    @include row(true);
+    @include grid-system.row(true);
     
     .half {
-      @include span(12);
+      @include grid-system-spans.span(12);
       
       &:first-child { margin: 0 0 25px; }
     }
@@ -76,7 +80,7 @@ form {
     display: block;
     margin: 0 0 5px;
     
-    span { color: map-get($army-branding, gold); }
+    span { color: map.get(colors.$army-branding, gold); }
   }
   
   .submit-form {
@@ -93,10 +97,10 @@ form {
 p.error { color: red; }
 
 
-@include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+@include breakpoints.breakpoints(lg_tablet sm_desktop desktop large really_big) {
   form {
     .field-row .half {
-      @include span(6);
+      @include grid-system-spans.span(6);
       
       &:first-child { margin: 0; }
     }
