--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 /* 
 GI Font (Default)
 https://github.com/RedHatBrand/overpass 
@@ -6,9 +8,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Bold */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-750.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/GI-750.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/GI-750.woff2') format('woff2');
+    src: url(variables.$e2path + '/fonts/rv7/gi/GI-750.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-750.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-750.woff2') format('woff2');
     font-style: normal;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -17,9 +19,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Bold Italic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-750Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/GI-750Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/GI-750Italic.woff2') format('woff2');
+    src: url(variables.$e2path + '/fonts/rv7/gi/GI-750Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-750Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-750Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -28,9 +30,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Regular */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-530.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/GI-530.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/GI-530.woff2') format('woff2');
+    src: url(variables.$e2path + '/fonts/rv7/gi/GI-530.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-530.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-530.woff2') format('woff2');
     font-style: normal;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -39,9 +41,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Italic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-530Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/GI-530Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/GI-530Italic.woff2') format('woff2');
+    src: url(variables.$e2path + '/fonts/rv7/gi/GI-530Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-530Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-530Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -50,9 +52,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Light */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-400.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/GI-400.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/GI-400.woff2') format('woff2');
+    src: url(variables.$e2path + '/fonts/rv7/gi/GI-400.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-400.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-400.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -61,9 +63,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Light Italic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-400Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/GI-400Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/GI-400Italic.woff2') format('woff2');
+    src: url(variables.$e2path + '/fonts/rv7/gi/GI-400Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-400Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/gi/GI-400Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -77,9 +79,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-Bold */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -88,9 +90,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-BoldItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -99,9 +101,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-Reg */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -110,9 +112,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-Italic */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -121,9 +123,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-Light */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -132,9 +134,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-LightItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -143,9 +145,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-ExtraLight */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: 300;
     text-rendering: optimizeLegibility;
@@ -154,9 +156,9 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: Overpass-ExtraLightItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
+    src: url(variables.$e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url(variables.$e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: 300;
     text-rendering: optimizeLegibility;
