--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -1,3 +1,8 @@
+@use "colors";
+@use "mixins/opacity";
+@use "custom-mixins/custom-transition";
+
+@use "sass:map";
 // ----------------------------------------------------------------------
 // Dependencies: base/_variables.scss,
 // base/custom-mixins/custom-transition,
@@ -10,139 +15,139 @@
 
 //primary colors
 .white {
-  color: map-get($army-branding, white);
+  color: map.get(colors.$army-branding, white);
 }
 
 .gold {
-  color: map-get($army-branding, gold);
+  color: map.get(colors.$army-branding, gold);
 }
 
 .army-black {
-  color: map-get($army-branding, armyblack);
+  color: map.get(colors.$army-branding, armyblack);
 }
 
 .white-background {
-  background-color: map-get($army-branding, white);
+  background-color: map.get(colors.$army-branding, white);
 }
 
 .gold-background {
-  background-color: map-get($army-branding, gold);
+  background-color: map.get(colors.$army-branding, gold);
 }
 
 .green-background {
-  background-color: map-get($army-branding, green);
-  color: map-get($army-branding, gold);
+  background-color: map.get(colors.$army-branding, green);
+  color: map.get(colors.$army-branding, gold);
 }
 
 .field01-background {
-  background-color: map-get($army-branding, field01);
-  color: map-get($army-branding, white);
+  background-color: map.get(colors.$army-branding, field01);
+  color: map.get(colors.$army-branding, white);
 }
 
 .field02-background {
-  background-color: map-get($army-branding, field02);
-  color: map-get($army-branding, armyblack);
+  background-color: map.get(colors.$army-branding, field02);
+  color: map.get(colors.$army-branding, armyblack);
 }
 
 .tan-background {
-  background-color: map-get($army-branding, tan);
-  color: map-get($army-branding, armyblack);
+  background-color: map.get(colors.$army-branding, tan);
+  color: map.get(colors.$army-branding, armyblack);
 }
 
 .gray01-background {
-  background-color: map-get($army-branding, gray01);
-  color: map-get($army-branding, white);
+  background-color: map.get(colors.$army-branding, gray01);
+  color: map.get(colors.$army-branding, white);
 }
 
 .gray02-background {
-  background-color: map-get($army-branding, gray02);
-  color: map-get($army-branding, armyblack);
+  background-color: map.get(colors.$army-branding, gray02);
+  color: map.get(colors.$army-branding, armyblack);
 }
 
 .army-black-background {
-  background-color: map-get($army-branding, armyblack);
-  color: map-get($army-branding, gold);
+  background-color: map.get(colors.$army-branding, armyblack);
+  color: map.get(colors.$army-branding, gold);
 }
 
 //accent colors
 .black {
-  color: map-get($army-branding, black);
+  color: map.get(colors.$army-branding, black);
 }
 
 .grey90 {
-  color: map-get($army-branding, grey90);
+  color: map.get(colors.$army-branding, grey90);
 }
 
 .grey80 {
-  color: map-get($army-branding, grey80);
+  color: map.get(colors.$army-branding, grey80);
 }
 
 .grey70 {
-  color: map-get($army-branding, grey70);
+  color: map.get(colors.$army-branding, grey70);
 }
 
 .grey60 {
-  color: map-get($army-branding, grey60);
+  color: map.get(colors.$army-branding, grey60);
 }
 
 .grey50 {
-  color: map-get($army-branding, grey50);
+  color: map.get(colors.$army-branding, grey50);
 }
 
 .grey40 {
-  color: map-get($army-branding, grey40);
+  color: map.get(colors.$army-branding, grey40);
 }
 
 .grey30 {
-  color: map-get($army-branding, grey30);
+  color: map.get(colors.$army-branding, grey30);
 }
 
 .grey20 {
-  color: map-get($army-branding, grey20);
+  color: map.get(colors.$army-branding, grey20);
 }
 
 .grey10 {
-  color: map-get($army-branding, grey10);
+  color: map.get(colors.$army-branding, grey10);
 }
 
 .black-background {
-  background-color: map-get($army-branding, black);
+  background-color: map.get(colors.$army-branding, black);
 }
 
 .grey90-background {
-  background-color: map-get($army-branding, grey90);
+  background-color: map.get(colors.$army-branding, grey90);
 }
 
 .grey80-background {
-  background-color: map-get($army-branding, grey80);
+  background-color: map.get(colors.$army-branding, grey80);
 }
 
 .grey70-background {
-  background-color: map-get($army-branding, grey70);
+  background-color: map.get(colors.$army-branding, grey70);
 }
 
 .grey60-background {
-  background-color: map-get($army-branding, grey60);
+  background-color: map.get(colors.$army-branding, grey60);
 }
 
 .grey50-background {
-  background-color: map-get($army-branding, grey50);
+  background-color: map.get(colors.$army-branding, grey50);
 }
 
 .grey40-background {
-  background-color: map-get($army-branding, grey40);
+  background-color: map.get(colors.$army-branding, grey40);
 }
 
 .grey30-background {
-  background-color: map-get($army-branding, grey30);
+  background-color: map.get(colors.$army-branding, grey30);
 }
 
 .grey20-background {
-  background-color: map-get($army-branding, grey20);
+  background-color: map.get(colors.$army-branding, grey20);
 }
 
 .grey10-background {
-  background-color: map-get($army-branding, grey10);
+  background-color: map.get(colors.$army-branding, grey10);
 }
 
 //generic helper classes
@@ -151,7 +156,7 @@
   min-height: 0;
   max-height: 0;
   visibility: hidden;
-  @include opacity(0);
-  @include custom-transition(opacity .25s ease, height .25s ease, min-height .25s ease, max-height .25s ease, visibility .5s linear);
+  @include opacity.opacity(0);
+  @include custom-transition.custom-transition(opacity .25s ease, height .25s ease, min-height .25s ease, max-height .25s ease, visibility .5s linear);
 }
 
