--- a/_scss/base/custom-mixins/_custom-expandable-span.scss
+++ b/_scss/base/custom-mixins/_custom-expandable-span.scss
@@ -13,7 +13,7 @@
       background-color: map-get($army-branding, armyblack);
       content: '';
       position: absolute;
-      @include custom-transition(transform .25s ease);
+      @include custom-transition.custom-transition(transform .25s ease);
     }
 
     &:before {
