--- a/_scss/base/mixins/_animate-link.scss
+++ b/_scss/base/mixins/_animate-link.scss
@@ -1,3 +1,6 @@
+@use "rem";
+@use "transitions";
+
 // ----------------------------------------------------------------------
 
   // Animated link that has a fade-in underline
@@ -10,13 +13,13 @@
 
   font-family:$font;
   
-  @include single-transition(border, 0.2s, ease-in-out, 0);
+  @include transitions.single-transition(border, 0.2s, ease-in-out, 0);
   text-decoration:none;
 
   color: $color;
   border-bottom:1px solid transparent;
 
-  @include rem("font-size", $fontSize);
+  @include rem.rem("font-size", $fontSize);
   
   &:focus,
   &:hover {
