--- a/_scss/elements/_leaders.scss
+++ b/_scss/elements/_leaders.scss
@@ -1,6 +1,11 @@
+@use "../base/colors";
+@use "../base/variables";
+@use "../base/mixins/breakpoints";
+
+@use "sass:map";
 .leaders {
   li {
-    border: 2px solid map-get($army-branding, grey50);
+    border: 2px solid map.get(colors.$army-branding, grey50);
     margin: 0 0 30px;
     overflow: hidden;
     position: relative;
@@ -33,8 +38,8 @@
       text-align: center;
       flex-grow: 1;
       .leaders-heading {
-        color: $dark-gray-color;
-        font: 400 1em $font-family;
+        color: colors.$dark-gray-color;
+        font: 400 1em variables.$font-family;
         margin: 0 0 10px;
         text-transform: uppercase;
       }
@@ -43,12 +48,12 @@
       }
       
       .leaders-title {
-        color: $primary-text-color;
-        font: 700 1.313em $font-family;
+        color: colors.$primary-text-color;
+        font: 700 1.313em variables.$font-family;
       }
     }
 
-    @include breakpoints(nav) {
+    @include breakpoints.breakpoints(nav) {
       justify-content: space-between;
       flex-wrap: nowrap;
 
@@ -68,7 +73,7 @@
       }
     }
 
-    @include breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
+    @include breakpoints.breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
       justify-content: space-between;
       flex-wrap: nowrap;
 
