--- a/_scss/elements/_playlist.scss
+++ b/_scss/elements/_playlist.scss
@@ -1,13 +1,20 @@
+@use "../base/colors";
+@use "../base/variables";
+@use "../base/custom-mixins/custom-transition";
+@use "../base/mixins/box-model";
+@use "../base/mixins/breakpoints";
+
+@use "sass:map";
 .playlist .playlist-player *,
 .main .playlist .playlist-player * {
-  @include box-sizing(content-box);
+  @include box-model.box-sizing(content-box);
 }
 .playlist {
   &.playlist-ready .playlist-player .playlist-panel {
     display: block;
   }
   .playlist-player {
-    background-color: map-get($army-branding, armyblack);
+    background-color: map.get(colors.$army-branding, armyblack);
     color: #fff;
     overflow: hidden;
     position: relative;
@@ -17,7 +24,7 @@
       background-color: #CCC;
       height: 100%;
       left: 0;
-      // @include Opacity(0.7);
+      // @include opacity.opacity(0.7);
       opacity: 0.7;
       position: absolute;
       top: 0;
@@ -34,7 +41,7 @@
       position: relative;
       width: 100%;
 
-      @include custom-transition(margin 500ms);
+      @include custom-transition.custom-transition(margin 500ms);
     }
 
     .video-player {
@@ -57,7 +64,7 @@
     }
     
     .playlist-panel {
-      background-color: map-get($army-branding, armyblack);
+      background-color: map.get(colors.$army-branding, armyblack);
       display: none;
       
       .playlist-info {
@@ -96,10 +103,10 @@
       }
 
       .videos {
-        border-bottom: 1px solid map-get($army-branding, armyblack);
-        border-top: 1px solid map-get($army-branding, gold);
+        border-bottom: 1px solid map.get(colors.$army-branding, armyblack);
+        border-top: 1px solid map.get(colors.$army-branding, gold);
         display: none;
-        font: 600 15px $font-family;
+        font: 600 15px variables.$font-family;
         list-style: none;
         max-height: 300px;
         overflow-x: hidden;
@@ -139,7 +146,7 @@
           }
           
           .v-position, .v-play-icon {
-            color: map-get($army-branding, white);
+            color: map.get(colors.$army-branding, white);
             display: block;
             font-weight: 700;
             margin: 0;
@@ -150,7 +157,7 @@
             line-height: 22px;
             position: relative;
             
-            border: 1px solid map-get($army-branding, white);
+            border: 1px solid map.get(colors.$army-branding, white);
             -webkit-border-radius: 50%;
             -moz-border-radius: 50%;
             border-radius: 50%;
@@ -175,8 +182,8 @@
           }
           
           &:hover, &:focus, &.active {
-            background: map-get($army-branding, grey70);
-            color: map-get($army-branding, white);
+            background: map.get(colors.$army-branding, grey70);
+            color: map.get(colors.$army-branding, white);
             cursor: pointer;
             
             .v-play-icon { display: block; }
@@ -210,7 +217,7 @@
     }
 
     .playlist-toggle {
-      background-color: map-get($army-branding, armyblack);
+      background-color: map.get(colors.$army-branding, armyblack);
       line-height: 0;
       position: absolute;
       right: -50px;
@@ -226,7 +233,7 @@
       span::before {
         content: "\e977";
         font-family: 'armyicons';
-        color: map-get($army-branding, white);
+        color: map.get(colors.$army-branding, white);
         font-size: 42px;
         display: inline-block;
         height: 22px;
@@ -237,13 +244,13 @@
         font-weight: normal;
       }
       &:hover span::before {
-        color: map-get($army-branding, gold);
+        color: map.get(colors.$army-branding, gold);
       }
     }
 
     // if it's narrow, then it maintains mobile styling (no need for other breakpoints)
     &:not(.narrow) {
-      @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+      @include breakpoints.breakpoints(lg_tablet sm_desktop desktop large really_big) {
         .video-player {
           width: auto;
         }
@@ -289,7 +296,7 @@
         }
       }
 
-      @include breakpoints(lg_tablet) {
+      @include breakpoints.breakpoints(lg_tablet) {
         &.open-playlist {
           .video-player {
             margin-right: 300px;
@@ -300,7 +307,7 @@
         }
       }
 
-      @include breakpoints(sm_desktop desktop large really_big) {
+      @include breakpoints.breakpoints(sm_desktop desktop large really_big) {
         .playlist-panel .videos {
           font-size: 16px;
           .video-item {
@@ -334,7 +341,7 @@
 
 
 
-    // @include breakpoints(mobile nav tablet) {
+    // @include breakpoints.breakpoints(mobile nav tablet) {
     //   .video-player,
     //   .playlist-panel {
     //     margin: 0;
