--- a/_scss/elements/_rich-text.scss
+++ b/_scss/elements/_rich-text.scss
@@ -1,3 +1,8 @@
+@use "../base/colors";
+@use "../base/mixins/breakpoints";
+@use "../base/custom-mixins/custom-transition";
+
+@use "sass:map";
 .rich-text-element,
 .rich-text-element .ql-editor {
   .ql-clipboard {
@@ -258,7 +263,7 @@
     font-size: 1.875em;
     line-height: 1.333em;
 
-    @include breakpoints(sm_desktop desktop large really_big) {
+    @include breakpoints.breakpoints(sm_desktop desktop large really_big) {
       font-size: 2.25em;
       line-height: 1.333em;
     }
@@ -274,7 +279,7 @@
     font-size: 1.313em;
     line-height: 1.4em;
   
-    @include breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
+    @include breakpoints.breakpoints(tablet lg_tablet sm_desktop desktop large really_big) {
       font-size: 1.5em;
       line-height: 1.5em;
     }
@@ -286,15 +291,15 @@
 
   .ql-editor blockquote,
   blockquote {
-    border-left: 4px solid map-get($army-branding, gold);
+    border-left: 4px solid map.get(colors.$army-branding, gold);
     padding: 0 0 0 1.25em;
     margin: 2em 0;
     font-size: 1.125em;
     font-style: normal;
     font-weight: 600;
     line-height: 1.5em;
-    color: map-get($army-branding, armyblack);
-    @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+    color: map.get(colors.$army-branding, armyblack);
+    @include breakpoints.breakpoints(lg_tablet sm_desktop desktop large really_big) {
       margin: 2em;
     }
   }
@@ -340,11 +345,11 @@
             &:before {
               position: absolute;
               z-index: 1;
-              @include custom-transition(opacity .25s ease);
+              @include custom-transition.custom-transition(opacity .25s ease);
               opacity: 0.5;
               content: "\e976";
               font-family: 'armyicons';
-              color: map-get($army-branding, white);
+              color: map.get(colors.$army-branding, white);
               font-size: 31px;
               -webkit-font-smoothing: none;
               -moz-osx-font-smoothing: grayscale;
@@ -353,7 +358,7 @@
               line-height: normal;
               right: 10px;
               bottom: 10px;
-              text-shadow: 0 0 5px map-get($army-branding, black);
+              text-shadow: 0 0 5px map.get(colors.$army-branding, black);
             }
 
             &:hover:before,
@@ -363,8 +368,8 @@
           }
         }
 
-        // @include img-grayscale-hover('a');
-        @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+        // @include img-grayscale-hover.img-grayscale-hover('a');
+        @include breakpoints.breakpoints(lg_tablet sm_desktop desktop large really_big) {
           width: 49%;
         }
 
@@ -399,7 +404,7 @@
             max-width: 100%;
             max-height: 75vh;
 
-            @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+            @include breakpoints.breakpoints(lg_tablet sm_desktop desktop large really_big) {
               max-height: 550px;
             }
           }
@@ -411,11 +416,11 @@
   .editor-video {
     .media-caption {
       p {
-        color: map-get($army-branding, grey60);
+        color: map.get(colors.$army-branding, grey60);
         font-size: 0.875em;
         margin: 10px 0 0;
         &:after {
-          background-color: map-get($army-branding, gold);
+          background-color: map.get(colors.$army-branding, gold);
           content: '';
           height: 2px;
           width: 40px;
