--- a/_scss/elements/_two-column-body.scss
+++ b/_scss/elements/_two-column-body.scss
@@ -1,3 +1,8 @@
+@use "../base/colors";
+@use "../base/variables";
+@use "../base/mixins/breakpoints";
+
+@use "sass:map";
 // File Name: _two-column-body.scss
 // Description: main body content with right column extras
 // Used by: article.scss
@@ -12,12 +17,12 @@
 
   .right-column {    
     .top-stories {
-      background: $light-gray-color;
+      background: colors.$light-gray-color;
       padding: 30px;
 
       h4 {
         &:first-child { margin: 0 0 30px; }
-        &:after { background-color: map-get($army-branding, armyblack); }
+        &:after { background-color: map.get(colors.$army-branding, armyblack); }
       }
       
       ul li {
@@ -36,7 +41,7 @@
             width: 100%;
             
             &:first-child {
-              font: 400 .813em/1.375em $font-family;
+              font: 400 .813em/1.375em variables.$font-family;
               text-transform: uppercase;
             }
           }
@@ -46,7 +51,7 @@
   }
 }
 
-@include breakpoints(sm_desktop desktop large really_big) {
+@include breakpoints.breakpoints(sm_desktop desktop large really_big) {
   .two-column-body {
     display: table;
     table-layout: fixed;
