--- a/_scss/layout/_grid-system-spans.scss
+++ b/_scss/layout/_grid-system-spans.scss
@@ -1,20 +1,22 @@
+@use "../base/variables";
+
 @use "sass:math";
 
-@mixin span($columns, $gutter: $grid-gutter-width)
+@mixin span($columns, $gutter: variables.$grid-gutter-width)
 {
   float: left;
   padding-left: ($gutter * 0.5);
   padding-right: ($gutter * 0.5);
   //@include custom-calc(width, #{"#{percentage(($columns / $grid-columns))} - #{$gutter}"});
-  width: percentage(math.div($columns, $grid-columns));
+  width: math.percentage(math.div($columns, variables.$grid-columns));
 }
 
 // automatically adds a clear to the first element of each row
 // NOTE: must be set to specific breakpoints (if they overlap it will mess things up)
-@mixin span-clear($columns, $gutter: $grid-gutter-width)
+@mixin span-clear($columns, $gutter: variables.$grid-gutter-width)
 {
-  $numColumns: floor(math.div($grid-columns, $columns));
-  @include span($columns, $gutter: $grid-gutter-width);
+  $numColumns: math.floor(math.div(variables.$grid-columns, $columns));
+  @include span($columns, $gutter: variables.$grid-gutter-width);
 
   // span-clear(4) -> nth-child(3n+4) or every 3rd starting at 4
   &:nth-child(#{$numColumns}n+#{($numColumns + 1)}) {
@@ -24,11 +26,11 @@
 
 @mixin offset($columns)
 {
-  margin-left: percentage(math.div($columns, $grid-columns));
+  margin-left: math.percentage(math.div($columns, variables.$grid-columns));
 }
 
 // creates classes named .span1 through .span12
 // same as doing @include span(1);
-@for $i from 1 through $grid-columns {
+@for $i from 1 through variables.$grid-columns {
   .span#{$i} { @include span($i); }
 }
