--- a/e2/css/rv7/upgrade/style.scss
+++ b/e2/css/rv7/upgrade/style.scss
@@ -5,18 +5,20 @@
 // ----------------------------------------------------------------------
 // Base
 // ----------------------------------------------------------------------
-@import "base";
+@use "base";
 
 // ----------------------------------------------------------------------
 // Layout
 // ----------------------------------------------------------------------
-@import "layout";
+@use "layout";
 
 // ----------------------------------------------------------------------
 // CSS
 // ----------------------------------------------------------------------
-@import "elements/buttons";
-@import "elements/header";
+@use "elements/buttons";
+@use "elements/header";
+@use "base/colors";
+@use "base/variables";
 
 *, *::after, *::before {
   box-sizing: inherit;
@@ -34,7 +36,7 @@ body {
 .upgrade-container {
   padding: 68px 15px 0;
   margin: 0 auto 4em;
-  max-width: $screen-md-min;
+  max-width: variables.$screen-md-min;
 
   h1 {
     margin: 1.5em 0 1em;
@@ -60,12 +62,12 @@ body {
     text-decoration: none;
 
     &:hover {
-      color: map-get($army-branding, grey60);
+      color: map-get(colors.$army-branding, grey60);
     }
   }
 
   .ms-support {
-    background-color: $light-gray-color;
+    background-color: colors.$light-gray-color;
     padding: 20px;
 
     h3 {
@@ -109,7 +111,7 @@ body {
 //     left: 50%;
 //     line-height: 0;
 //     position: absolute;
-//     @include transform(translateX, -50%);
+//     @include transform.transform(translateX, -50%);
 //     z-index: 1;
 //     display: flex;
 //     align-content: center;
